Add tab to show a suggested basic element

--- a/ElementFinder/ElementFinder.csproj
+++ b/ElementFinder/ElementFinder.csproj
@@ -74,6 +74,7 @@
     <Compile Include="BL\InteractionObserver.cs" />
     <Compile Include="BL\PositionObserver.cs" />
     <Compile Include="Controls\AutomationPropertiesControl.cs" />
+    <Compile Include="Controls\BasicElementSuggestor.cs" />
     <Compile Include="Controls\CloseButton.cs" />
     <Compile Include="Controls\CopyableTextBox.cs" />
     <Compile Include="Controls\CopyButton.cs" />
