--- a/ElementFinder/app.config
+++ b/ElementFinder/app.config
@@ -50,13 +50,13 @@
                 <value>LeftCtrl + E</value>
             </setting>
             <setting name="CopyAutomationIdShortcut" serializeAs="String">
-                <value>LeftCtrl + LeftShift + C</value>
+                <value />
             </setting>
             <setting name="BringOnTopShortcut" serializeAs="String">
-                <value>LeftCtrl + LeftShift + T</value>
+                <value />
             </setting>
             <setting name="ToggleViewShortcut" serializeAs="String">
-                <value>LeftCtrl + V</value>
+                <value />
             </setting>
             <setting name="WatchForElementsShortcut" serializeAs="String">
                 <value>LeftCtrl + LeftShift</value>
