Add possibilies to the the window size, position and state into the BasicWindow.Unsafe Add new WindowSetup object for a more easy window setup

--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Utilities\WindowFocus.cs" />
     <Compile Include="Utilities\WindowInfo.cs" />
     <Compile Include="Utilities\WindowChangedEventArgs.cs" />
+    <Compile Include="Utilities\WindowSetup.cs" />
     <Compile Include="WindowFinder.cs" />
     <Compile Include="WindowNotFoundException.cs" />
     <Compile Include="WindowState.cs" />
