--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
@@ -58,6 +59,7 @@
     <Compile Include="DoTests.cs" />
     <Compile Include="Internal\StringExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SomethingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DW.CodedUI\DW.CodedUI.csproj">
