The MouseEx now can set the current cursor position either instantly, or from a point over a period of time

--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="DoTests.cs" />
     <Compile Include="Internal\StringExtensionsTests.cs" />
     <Compile Include="KeyboardExTests.cs" />
+    <Compile Include="MouseExTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SomethingTests.cs" />
   </ItemGroup>
