--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -102,7 +102,15 @@
     <Compile Include="KeyboardExTests.cs" />
     <Compile Include="MouseExTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SomethingTests.cs" />
+    <Compile Include="SmokeTests.cs" />
+    <Compile Include="UITests.cs" />
+    <Compile Include="Utilities\ColorDetectorTests.cs" />
+    <Compile Include="Utilities\DynamicSleepTests.cs" />
+    <Compile Include="Utilities\ElementListenerTests.cs" />
+    <Compile Include="Utilities\WindowFocusTests.cs" />
+    <Compile Include="Utilities\WindowListenerTests.cs" />
+    <Compile Include="Utilities\WindowSetupTests.cs" />
+    <Compile Include="WindowFinderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DW.CodedUI\DW.CodedUI.csproj">
