--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="MouseExTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmokeTests.cs" />
+    <Compile Include="TestData.cs" />
     <Compile Include="UITests.cs" />
     <Compile Include="Utilities\ColorDetectorTests.cs" />
     <Compile Include="Utilities\DynamicSleepTests.cs" />
