Add class to the utilities for a more easy access to the AutomationPatterns

--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Utilities\InExclude.cs" />
     <Compile Include="Utilities\Listener.cs" />
     <Compile Include="Utilities\LogWriter.cs" />
+    <Compile Include="Utilities\Patterns.cs" />
     <Compile Include="Utilities\WindowChangeKind.cs" />
     <Compile Include="Utilities\WindowFilters.cs" />
     <Compile Include="Utilities\WindowListener.cs" />
